# grSim

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.user.2.5pre1  CMakePresets.json  CODE_OF_CONDUCT.md  Dockerfile  INSTALL  INSTALL.md  LICENSE.md  Makefile  PULL_REQUEST_TEMPLATE.md  README  README.md  Simulator.pro  aboutwidget.cpp  aboutwidget.h  common.h  config.h  configwidget.cpp  configwidget.h  constants.h  docker-entry.sh  getpositionwidget.cpp  getpositionwidget.h  glwidget.cpp  glwidget.h  logger.cpp  logger.h  mac-build.sh  main.cpp  mainwindow.cpp  mainwindow.h  qrc_textures.cpp  (+15 more)
.github/: renovate.json
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  documentation.md  feature_change.md  performance_improvement.md
.github/workflows/: build.yaml  docker-build.yml
Graphics/: graphics.cpp  graphics.h
Physics/: pball.cpp  pball.h  pbox.cpp  pbox.h  pcylinder.cpp  pcylinder.h  pfixedbox.cpp  pfixedbox.h  pground.cpp  pground.h  pobject.cpp  pobject.h  pray.cpp  pray.h  pworld.cpp  pworld.h
client/: mainwindow.cpp  mainwindow.h
client/java/: build.xml
client/java/nbproject/: build-impl.xml  project.xml
client/java/src/Client/: Conection.java
client/java/src/Protobuf/: GrSimCommands.java  MessagesRobocupSslDetection.java
client/qt/: client.pro  mainwindow.cpp  mainwindow.h
clients/java/: README  README.md
clients/java/nbproject/: genfiles.properties  project.properties
clients/java/nbproject/private/: private.properties
clients/java/src/Client/: Interface.form  Interface.java
clients/java/src/Protobuf/: GrSimPacket.java  MessagesRobocupSslGeometry.java  MessagesRobocupSslWrapper.java
clients/qt/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h
cmake/: Utils.cmake
cmake/modules/: BuildODE.cmake  BuildProtobuf.cmake  EnvHelper.cmake  FindODE.cmake  FindOrBuildProtobuf.cmake  FindVarTypes.cmake
config/: Parsian.ini  ParsianNew.ini  RoboIME2012.ini  RoboTeamTwente2018.ini  Robojackets2015.ini  formation_1.formation
include/: config.h  configwidget.h  geometry.h  glwidget.h  graphics.h  mainwindow.h  robot.h  robotwidget.h  sslworld.h  statuswidget.h  winmain.h
include/VarTypes/: VarBase64.h  VarNotifier.h  VarTypes.h  VarTypesFactory.h  VarTypesInstance.h  VarXML.h  ui_timewidget.h
include/VarTypes/gui/: VarItem.h  VarItemDelegate.h  VarTreeModel.h  VarTreeView.h  VarTreeViewOptions.h
include/VarTypes/primitives/: VarBlob.h  VarBool.h  VarBoolVal.h  VarDouble.h  VarDoubleVal.h  VarExternal.h  VarInt.h  VarIntVal.h  VarList.h  VarQWidget.h  VarSelection.h  VarString.h  VarStringEnum.h  VarStringVal.h  VarTrigger.h  VarType.h  VarVal.h
include/VarTypes/xml/: xmlParser.h
include/google/protobuf/: descriptor.pb.h
include/google/protobuf/stubs/: common.h
include/grsim/: config.h.in  configwidget.h  getpositionwidget.h  glwidget.h  mainwindow.h  qt_version.h  robot.h  robotwidget.h  sslworld.h  team.h
include/grsim/net/: robocup_ssl_server.h
include/grsim/physics/: pcylinder.h  pfixedbox.h  pground.h  pobject.h  pworld.h
include/net/: robocup_ssl_client.h  robocup_ssl_server.h
include/physics/: pground.h  pobject.h  pray.h  pworld.h
proto/: comment  grSim_Commands.pb.cc  grSim_Replacement.pb.cc  grSim_Replacement.pb.h  messages_robocup_ssl_detection.pb.cc  messages_robocup_ssl_detection.pb.h  messages_robocup_ssl_geometry.pb.cc  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_refbox_log.pb.cc  messages_robocup_ssl_refbox_log.pb.h  messages_robocup_ssl_wrapper.pb.cc  messages_robocup_ssl_wrapper.pb.h  netraw.cpp  netraw.h  robocup_ssl_client.h  robocup_ssl_server.cpp  robocup_ssl_server.h  util.h
proto/pb/: grSim_Packet.proto
resources/: grsim.desktop  grsim.rc  textures.qrc
resources/icons/: grsim.icns
src/: config.h  configwidget.cpp  configwidget.h  geometry.cpp  getpositionwidget.cpp  glwidget.cpp  graphics.cpp  graphics.h  logger.cpp  main.cpp  mainwindow.cpp  robot.cpp  robotwidget.cpp  sslworld.cpp  sslworld.h  statuswidget.cpp  team.cpp  textures.qrc
src/Graphics/: graphics.cpp
src/client/java/src/Protobuf/: GrSimReplacement.java  MessagesRobocupSslRefboxLog.java
src/net/: robocup_ssl_client.cpp  robocup_ssl_client.h  robocup_ssl_server.cpp
src/physics/: pball.cpp  pbox.cpp  pcylinder.cpp  pfixedbox.cpp  pground.cpp  pground.h  pobject.cpp  pray.cpp  pworld.cpp
src/proto/: grSim_Commands.pb.h  grSim_Commands.proto  grSim_Packet.pb.cc  grSim_Packet.pb.h  grSim_Packet.proto  grSim_Replacement.proto  messages_robocup_ssl_detection.proto  messages_robocup_ssl_geometry.proto  messages_robocup_ssl_refbox_log.proto  messages_robocup_ssl_wrapper.proto  ssl_gc_common.proto  ssl_simulation_config.proto  ssl_simulation_control.proto  ssl_simulation_error.proto  ssl_simulation_robot_control.proto  ssl_simulation_robot_feedback.proto  ssl_simulation_synchronous.proto  ssl_vision_geometry.proto
src/proto/pb/: compile.sh
